@@ -43,7 +43,7 @@ Transform {
 void main (void)
 {
 	gl_Position     = ftransform ();
-	gl_TexCoord [0] = gl_MultiTexCoord0;
+	gl_TexCoord [0] = gl_TextureMatrix [0] * gl_MultiTexCoord0;
 }
 "
           }
@@ -54,7 +54,7 @@ uniform sampler2D myTexture;
 
 void main (void)
 {
-	gl_FragColor = texture2D (myTexture, gl_TexCoord [0] .xy);
+	gl_FragColor = textureProj (myTexture, gl_TexCoord [0]);
 }
 "
           }
