@@ -57,6 +57,7 @@ Transform {
     appearance Appearance {
       shaders DEF Water ComposedShader {
         inputOutput SFTime  time 0
+        inputOutput SFVec3f eyePos 0 0 0
         inputOutput SFInt32 numWaves 5
         inputOutput MFFloat amplitude [ 0.2, 0.2, 0.1, 0.1, 0.1 ]
         inputOutput MFFloat waveLength [ 1.1, 2.3, 3.1, 4.1, 5.3 ]
@@ -188,3 +189,7 @@ void main ()
 }
 
 ROUTE Timer.time TO Water.set_time
+
+#DEF Proxy ProximitySensor { size 1000 1000 1000 }
+
+#ROUTE Proxy.position_changed TO Water.eyePos
