@@ -1,3 +1,9 @@
+2013-03-19  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DShapeNode.cpp:
+	* X3DTexture2DNode.cpp:
+	* ComposedCubeMapTexture.cpp: 
+
 2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DShapeNode.cpp:
