@@ -1,3 +1,8 @@
+2013-03-19  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Water2.wrl:
+	* ComposedShader.wrl: 
+
 2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* TouchSensor.wrl: 
